--- a/resources/custom.css
+++ b/resources/custom.css
@@ -1,9 +1,7 @@
 /* title slide */
-/*div section:first-child section:first-child{
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-}*/
+div section:first-child section:first-child{
+    padding-top: 15%;
+}
 
 /* Subsequent slides */
 div section + section{
